# cargo-setup

./: Cargo.toml  README.md
src/: main.rs
