[package]
name = "cargo-setup"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to scaffold projects with README, LICENSE, tests/, benches/, using your cargo-me profile"
repository = "https://github.com/JDPlumbing/cargo-setup"
readme = "README.md"
license = "MIT"


[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
